--- a/index.html
+++ b/index.html
@@ -1,35 +1,54 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="UTF-8">
+    <title>Speaker Submission</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="practice.js"></script>
-    <title>Postcard example</title>
   </head>
   <body>
-    <form>
-      <fieldset>
-        <legend>Feedback form</legend>
-
-        <p>Required fields are labelled with "required".</p>
-        <div>
-          <label for="fname">First name: </label>
-          <input id="fname" name="fname" type="text" required>
-          <span></span>
-        </div>
-        <div>
-          <label for="lname">Last name: </label>
-          <input id="lname" name="lname" type="text" required>
-          <span></span>
-        </div>
-        <div>
-          <label for="email">Email address: </label>
-          <input id="email" name="email" type="email">
-          <span></span>
-        </div>
-        <div><button>Submit</button></div>
+    <header class="speaker-form-header">
+      <h1>Speaker Submission</h1>
+      <p><em>Want to speak at our fake conference? Fill out this form.</em></p>
+    </header>
+    <form action="" method="get" class="speaker-form">
+      <div class="form-row">
+        <label for="full-name">Name</label>
+        <input type="text" name="full-name" id="full-name" />
+      </div>
+      <div class="form-row">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" placeholder="joe@example.com" />
+      </div>
+      <fieldset class="legacy-form-row">
+        <legend>Type of Talk</legend>
+        <input type="radio" name="talk-type" value="main-stage" id="talk-type-1" />
+        <label for="talk-type-1" class="radio-label">Main Stage</label>
+        <input type="radio" name="talk-type" value="workshop" id="talk-type-2" checked />
+        <label for="talk-type-2" class="radio-label">Workshop</label>
       </fieldset>
+      <div class="form-row">
+        <label for="t-shirt">T-Shirt Size</label>
+        <select name="t-shirt" id="t-shirt">
+          <option value="xs">Extra Small</option>
+          <option value="s">Small</option>
+          <option value="m">Medium</option>
+          <option value="l">Large</option>
+        </select>
+      </div>
+      <div class="form-row">
+        <label for="abstract">Abstract</label>
+        <textarea name="abstract" id="abstract"></textarea>
+        <div class="instructions">Describe your talk in 500 words or less</div>
+      </div>
+      <div class="form-row">
+        <label for="available" class="checkbox-label">
+          <input type="checkbox" id="available" name="available" value="is-available" />
+          <span>I'm actually available the date of the talk</span>
+        </label>
+      </div>
+      <div class="form-row">
+        <button>Submit</button>
+      </div>
     </form>
   </body>
 </html>
