--- a/index.html
+++ b/index.html
@@ -1,54 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Speaker Submission</title>
+    <title>Change Password Visibility</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="practice.js" defer></script>
+    <link rel="stylesheet" href="https://codepen.io/web-dot-dev/pen/abpoXGZ.css">
+    <link rel="stylesheet" href="https://codepen.io/web-dot-dev/pen/gOgYqvz.css">
   </head>
   <body>
-    <header class="speaker-form-header">
-      <h1>Speaker Submission</h1>
-      <p><em>Want to speak at our fake conference? Fill out this form.</em></p>
-    </header>
-    <form action="" method="get" class="speaker-form">
-      <div class="form-row">
-        <label for="full-name">Name</label>
-        <input type="text" name="full-name" id="full-name" />
-      </div>
-      <div class="form-row">
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" placeholder="joe@example.com" />
-      </div>
-      <fieldset class="legacy-form-row">
-        <legend>Type of Talk</legend>
-        <input type="radio" name="talk-type" value="main-stage" id="talk-type-1" />
-        <label for="talk-type-1" class="radio-label">Main Stage</label>
-        <input type="radio" name="talk-type" value="workshop" id="talk-type-2" checked />
-        <label for="talk-type-2" class="radio-label">Workshop</label>
-      </fieldset>
-      <div class="form-row">
-        <label for="t-shirt">T-Shirt Size</label>
-        <select name="t-shirt" id="t-shirt">
-          <option value="xs">Extra Small</option>
-          <option value="s">Small</option>
-          <option value="m">Medium</option>
-          <option value="l">Large</option>
-        </select>
-      </div>
-      <div class="form-row">
-        <label for="abstract">Abstract</label>
-        <textarea name="abstract" id="abstract"></textarea>
-        <div class="instructions">Describe your talk in 500 words or less</div>
-      </div>
-      <div class="form-row">
-        <label for="available" class="checkbox-label">
-          <input type="checkbox" id="available" name="available" value="is-available" />
-          <span>I'm actually available the date of the talk</span>
-        </label>
-      </div>
-      <div class="form-row">
-        <button>Submit</button>
-      </div>
+    <form>
+      <h2>Enter your support query</h2>
+      <ul>
+        <li>
+          <label for="uname">User name:</label>
+          <input type="text" name="uname" id="uname" maxlength="15" pattern="[a-z]{1}\.[a-z0-9]{3,}" required>
+        </li>
+        <li>
+          <label for="email">Email address:</label>
+          <input type="email" name="email" id="email" pattern="[a-zA-Z0-9]+\@bigcorp\.eu" required>
+        </li>
+        <li>
+          <label for="phone">Phone number:</label>
+          <input type="tel" name="phone" id="phone" pattern="([0-9]{3}[\-\s\.]{1}[0-9]{3}[\-\s\.]{1}[0-9]{4})|([0-9]{10})" required>
+        </li>
+        <li>
+          <label for="comment">Comment:</label>
+          <textarea name="comment" id="comment" maxlength="200" required>
+          </textarea>
+        </li>
+        <li>
+          <button>Submit comment</button>
+        </li>
+      </ul>
     </form>
   </body>
 </html>
+
+<!-- 
+
+-add 'required'
+-
+ -->
