--- a/index.html
+++ b/index.html
@@ -3,42 +3,36 @@
   <head>
     <meta charset="UTF-8">
     <title>Change Password Visibility</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <script src="practice.js" defer></script>
     <link rel="stylesheet" href="https://codepen.io/web-dot-dev/pen/abpoXGZ.css">
     <link rel="stylesheet" href="https://codepen.io/web-dot-dev/pen/gOgYqvz.css">
   </head>
   <body>
-    <form>
-      <h2>Enter your support query</h2>
-      <ul>
-        <li>
-          <label for="uname">User name:</label>
-          <input type="text" name="uname" id="uname" maxlength="15" pattern="[a-z]{1}\.[a-z0-9]{3,}" required>
-        </li>
-        <li>
-          <label for="email">Email address:</label>
-          <input type="email" name="email" id="email" pattern="[a-zA-Z0-9]+\@bigcorp\.eu" required>
-        </li>
-        <li>
-          <label for="phone">Phone number:</label>
-          <input type="tel" name="phone" id="phone" pattern="([0-9]{3}[\-\s\.]{1}[0-9]{3}[\-\s\.]{1}[0-9]{4})|([0-9]{10})" required>
-        </li>
-        <li>
-          <label for="comment">Comment:</label>
-          <textarea name="comment" id="comment" maxlength="200" required>
-          </textarea>
-        </li>
-        <li>
-          <button>Submit comment</button>
-        </li>
-      </ul>
+    <form action="#0">
+      <div>
+        <input type="text" name="first_name" id="first_name" required placeholder=" " />
+        <label for="first_name" class="card">First Name</label>
+      </div>
+      <div>
+        <input type="text" name="last_name" id="last_name" required placeholder=" " />
+        <label for="last_name">Last Name</label>
+      </div>
+      <div>
+        <input type="email" name="email" id="email" required placeholder=" " />
+        <label for="email">Email Address</label>
+        <div class="requirements">
+          Must be a valid email address
+        </div>
+      </div>
+      <div>
+        <input type="password" id="password" name="password" required placeholder=" " pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" />
+        <label for="password">Password</label>
+        <div class="requirements">
+          Your password must be at least 6 characters as well as contain at least one uppercase, one lowercase, and one number.
+        </div>
+      </div>
+      <input type="submit" value="Sign Up" />
     </form>
   </body>
 </html>
-
-<!-- 
-
--add 'required'
--
- -->
