--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Change Password Visibility</title>
+    <title>Practice</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
     <script src="practice.js" defer></script>
-    <link rel="stylesheet" href="https://codepen.io/web-dot-dev/pen/abpoXGZ.css">
-    <link rel="stylesheet" href="https://codepen.io/web-dot-dev/pen/gOgYqvz.css">
   </head>
   <body>
   </body>
