--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Practice</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/benchmark/2.1.4/benchmark.min.js" integrity="sha512-xQc9DgKsysVXOYCdYCygJIizr64rtYYmNcOv4iKCBJw/xvuiaeG7FIwrkXuCgJg4U7oTqqNpknbC6eyc0NSREg==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <script src="practice.js" defer></script>
   </head>
   <body>
