--- a/index.html
+++ b/index.html
@@ -5,28 +5,25 @@
     <title>Practice</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/eventemitter3/4.0.7/index.min.js" integrity="sha512-Nn+fuByx+JZOUDYVLmCWg4lySybBp9KMI8NpUzkD/69HcondNJ6MZE9jxv8qDPCTyIK+kEzy7QDSZcYOy6KmfA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/asynquence/0.10.2/asq.js" integrity="sha512-d2TwO20bLHKoYj+xhd8oXu2Rt628Fsz9FWwfQFV/J+5XM9bvfl1/p3mWIq4VZLY7epb5w2UBNa0zCfZlj6QJKA==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <script src="practice.js" defer></script>
+    <script type="module" src="bakery.mjs"></script>
   </head>
   <body>
-    <h1></h1>
-    <div>
-      <h2></h2>
-      <p></p>
-      <div>
-        <i></i>
-      </div>
-    </div>
+    <div id="target"></div>
   </body>
 </html>
 
 
 
 <!-- 
-  goal wpm = 42
-  lines to practice = 15
+goal wpm = 44
+lines to practice = 15(15 is max on speedcoder)
 -->
 
 <!-- 
-  page: 86
+Where I left off:(Learning JavaScript Design Patterns)
+
+Dynamic Imports
 -->
