--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <script src="practice.js" type="module" defer></script>
   </head>
   <body>
-    <div class="container"></div>
+    <button id="addNewObserver">Add New Observer checkbox</button>
+    <input id="mainCheckbox" type="checkbox"/>
+    <div id="observersContainer"></div>
   </body>
 </html>
 
@@ -24,5 +26,5 @@ lines to practice = 15(15 is max on speedcoder)
 <!-- 
 Where I left off:(Learning JavaScript Design Patterns)
 
-Modern Module Pattern with WeakMap
+Differences Between The Observer And Publish/Subscribe Pattern
 -->
