--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" integrity="sha512-c3Nl8+7g4LMSTdrm621y7kf9v3SDPnhxLNhcjFJbKECVnmZHTdo+IRO05sNLTH/D3vA6u1X32ehoLC7WFVdheg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="practice.js" type="module" defer></script>
+    <script src="practice.js" defer></script>
   </head>
   <body>
+    <div class="item" data-plugin-options="{'message':'Goodbye World!'}"></div>
   </body>
 </html>
 
 
 
 <!-- 
-goal wpm = 44
+goal wpm = 45
 lines to practice = 15(15 is max on speedcoder)
 -->
 
 <!-- 
 Where I left off:(Learning JavaScript Design Patterns)
 
-Abstract Decorators
+Namespacing Patterns
 -->
