--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
   </body>
 </html>
 
-
-
-
 <!-- 
-99 Bottles Book: pg 25
+99 Bottles Book: pg 97
 
-goal wpm = 36(a lot of them)
+goal wpm = 37(a lot of them)
 at 46, new code
 lines to practice = 15(15 is max on speedcoder)
 -->
@@ -30,6 +27,7 @@ Namespacing Patterns
 -->
 
 <!-- 
-Physics book(ch1-ch14): pg 33 1.3
-Calculus book: pg 28
+Physics book(ch1-ch14): pg 39
+Calculus book: pg 31
+  #'s missed: 4, 5
  -->
