--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>JS Example</title>
+    <meta name="viewport" content="width=device-width">
+    <title>Connect Four Console</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pubsub-js/1.9.4/pubsub.min.js" integrity="sha512-GGfBS5/WTGwqhjo4nCGzQEWrX3+gkjF2G/JHs3cfhpynh5Lck+qqCwofvZlHoKuv/2P0B0Oo4Mq3Xa3Beyyf9A==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
-    <script src="main.js" defer></script>
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <ul id="questions"></ul>
+    <script src="main.js"></script>
   </body>
 </html>
 
 <!-- 
-99 Bottles Book: pg 355 8.4
-
-goal wpm = 39(a lot of them)
+goal wpm = 41(a lot of them)
 at 46, new code
 lines to practice = 15(15 is max on speedcoder)
 -->
@@ -27,7 +26,7 @@ Namespacing Patterns
 -->
 
 <!-- 
-Physics book(ch1-ch14): pg 46 3
-Calculus book: pg 32 & 21
+Physics book(ch1-ch14): pg 51
+Calculus book: pg 31
   #'s missed: 4, 5
  -->
