--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Namespacing Patterns
 -->
 
 <!-- 
-Physics book(ch1-ch14): pg 52
-Calculus book: pg 31
+Physics book(ch1-ch14): pg 52 last par.
+Calculus book: pg 31 
   #'s missed: 4, 5
  -->
