--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Connect Four Console</title>
+    <title>Connect Four HTML Skeleton</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pubsub-js/1.9.4/pubsub.min.js" integrity="sha512-GGfBS5/WTGwqhjo4nCGzQEWrX3+gkjF2G/JHs3cfhpynh5Lck+qqCwofvZlHoKuv/2P0B0Oo4Mq3Xa3Beyyf9A==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="reset.css">
   </head>
   <body>
+    <div class="container">
+      <h1 class="turn"></h1>
+      <div class="board"></div>
+    </div>
     <script src="loops.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
 
 <!-- 
-goal wpm = 41(a lot of them)
+goal wpm = 42(a lot of them)
 at 46, new code
 lines to practice = 15(15 is max on speedcoder)
 -->
@@ -27,7 +32,7 @@ Namespacing Patterns
 -->
 
 <!-- 
-Physics book(ch1-ch14): pg 52 last par.
+Physics book(ch1-ch14): pg 54
 Calculus book: pg 31 
   #'s missed: 4, 5
  -->
