--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <link rel="stylesheet" href="reset.css">
   </head>
   <body>
-    <div class="container">
-      <h1 class="turn"></h1>
-      <h2 class="game-result"></h2>
-      <div class="board"></div>
-    </div>
+    <div class="container"></div>
     <script src="loops.js"></script>
     <script src="main.js"></script>
   </body>
