--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Connect Four HTML Skeleton</title>
+    <title>Desktop</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pubsub-js/1.9.4/pubsub.min.js" integrity="sha512-GGfBS5/WTGwqhjo4nCGzQEWrX3+gkjF2G/JHs3cfhpynh5Lck+qqCwofvZlHoKuv/2P0B0Oo4Mq3Xa3Beyyf9A==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
     <link href="style.css" rel="stylesheet" type="text/css" />
@@ -17,7 +17,7 @@
 </html>
 
 <!-- 
-goal wpm = 42(a lot of them)
+goal wpm = 43(a lot of them)
 at 46, new code
 lines to practice = 15(15 is max on speedcoder)
 -->
@@ -29,7 +29,7 @@ Namespacing Patterns
 -->
 
 <!-- 
-Physics book(ch1-ch14): pg 54
-Calculus book: pg 31 
+Physics book(ch1-ch14): pg 56
+Calculus book: pg 32
   #'s missed: 4, 5
  -->
