--- a/index.html
+++ b/index.html
@@ -29,18 +29,20 @@
 </html>
 
 <!-- 
-goal wpm = 32(a lot of them)
+goal wpm = 37(a lot of them)
 after 48 completion, new code
 backtracking after completion: 9wpm
 lines to practice = 15(15 is max on speedcoder)
+
+'re' doc: . Dot
 -->
 
 <!-- 
 Physics book(ch1-ch14): pg 58
-Calculus book: pg 33
- -->
+Calculus book: pg 37
+-->
 
 <!-- 
-Chat:
--create a chess game in js
- -->
+Bat:
+
+-->
