--- a/index.html
+++ b/index.html
@@ -29,20 +29,28 @@
 </html>
 
 <!-- 
-goal wpm = 37(a lot of them)
+goal wpm = 38(a lot of them)
 after 48 completion, new code
 backtracking after completion: 9wpm
 lines to practice = 15(15 is max on speedcoder)
 
-'re' doc: . Dot
+'re' doc: re.finditer 
 -->
 
 <!-- 
-Physics book(ch1-ch14): pg 58
-Calculus book: pg 37
+Phyhics book(ch1-ch14): pg 58
+Calculus book: pg 39
+-->
+
+<!--
+Practice:
+Exercism 4
+CodeWars 0
+HackerRank 0
 -->
 
 <!-- 
-Bat:
-
+Chat:
+generate 4 interview question to ask a dentist owner
+create a regex expression that matches all emails
 -->
