--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
       referrerpolicy="no-referrer"
       defer
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link href="reset.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
@@ -30,6 +37,7 @@
           <li class="item2">Categories</li>
           <li class="item3">Contact</li>
         </ul>
+        <i class="ham-nav1 fa-solid fa-bars"></i>
       </nav>
       <ul class="category-drop">
         <li class="catd1"><a href="#">Cheese Burger</a></li>
@@ -37,6 +45,14 @@
         <li class="catd3"><a href="#">Fries</a></li>
         <li class="catd4"><a href="#">Shakes</a></li>
       </ul>
+      <nav class="nav2">
+        <i class="ham-nav2 fa-solid fa-bars"></i>
+        <ul class="right-ham-menu">
+          <li class="item1">Menu</li>
+          <li class="item2">Categories</li>
+          <li class="item3">Contact</li>
+        </ul>
+      </nav>
     </div>
     <script src="loops.js"></script>
     <script src="main.js"></script>
