--- a/index.html
+++ b/index.html
@@ -29,31 +29,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div class="container">
-      <nav class="nav1">
-        <span class="title">Raul Villalobos</span>
-        <ul class="right-nav">
-          <li class="item1">Menu</li>
-          <li class="item2">Categories</li>
-          <li class="item3">Contact</li>
-        </ul>
-        <i class="ham-nav1 fa-solid fa-bars"></i>
-      </nav>
-      <ul class="category-drop">
-        <li class="catd1"><a href="#">Cheese Burger</a></li>
-        <li class="catd2"><a href="#">Drinks</a></li>
-        <li class="catd3"><a href="#">Fries</a></li>
-        <li class="catd4"><a href="#">Shakes</a></li>
-      </ul>
-      <nav class="nav2">
-        <i class="ham-nav2 fa-solid fa-bars"></i>
-        <ul class="right-ham-menu">
-          <li class="item1">Menu</li>
-          <li class="item2">Categories</li>
-          <li class="item3">Contact</li>
-        </ul>
-      </nav>
-    </div>
+    <div class="container"></div>
     <script src="loops.js"></script>
     <script src="main.js"></script>
   </body>
@@ -65,7 +41,7 @@ after 48 completion, new code
 backtracking after completion: 9wpm
 lines to practice = 15(15 is max on speedcoder)
 
-'re' doc: re.finditer 
+'re' doc: Match Objects
 -->
 
 <!-- 
