--- a/index.html
+++ b/index.html
@@ -29,28 +29,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="content"></div>
     <script src="loops.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
-
-<!-- 
-goal wpm = 39(a lot of them)
-after 48 completion, new code
-backtracking after completion: 9wpm
-lines to practice = 15(15 is max on speedcoder)
-
-'re' doc: Match Objects
--->
-
-<!-- 
-Phyhics book(ch1-ch14): pg 58
-Calculus book: pg 39
--->
-
-<!-- 
-Chat:
-generate 4 interview questions to ask a dentist owner
-create a regex expression that matches all emails
--->
