--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <canvas id="mycanvas"></canvas>
-    <script src="https://cdn.jsdelivr.net/processing.js/1.4.8/processing.min.js"></script>
+    <div id="content"></div>
     <script src="loops.js"></script>
     <script src="main.js"></script>
   </body>
