--- a/index.html
+++ b/index.html
@@ -9,6 +9,79 @@
   </head>
   <body>
     <div id="content"></div>
+    <h2>Terms and Conditions</h2>
+    <h3>Please read our Terms and Conditions and sign below.</h3>
+    <section id="top-section">
+      <div id="">
+        <div>
+          <label for="">First name</label>
+          <p>*</p>
+        </div>
+        <input type="text" name="" id="" />
+      </div>
+      <div>
+        <div>
+          <label for="">Last name</label>
+          <p>*</p>
+        </div>
+        <input type="text" name="" id="" />
+      </div>
+      <div>
+        <div>
+          <label for="">Email</label>
+          <p>*</p>
+        </div>
+        <input type="email" name="" id="" />
+      </div>
+    </section>
+    <section>
+      <h4>Terms and Conditions</h4>
+      <p>
+        Last updated: (add date) Please read these Terms and Conditions
+        ("Terms", "Terms and Conditions") carefully before using the
+        http://www.mywebsite.com (change this) website and the My Mobile App
+        (change this) mobile application (the "Service") operated by My Company
+        (change this) ("us", "we", or "our"). Your access to and use of the
+        Service is conditioned on your acceptance of and compliance with these
+        Terms. These Terms apply to all visitors, users and others who access or
+        use the Service. By accessing or using the Service you agree to be bound
+        by these Terms. If you disagree with any part of the terms then you may
+        not access the Service. Purchases If you wish to purchase any product or
+        service made available through the Service ("Purchase"), you may be
+        asked to supply certain information relevant to your Purchase including,
+        without limitation, your … Subscriptions Some parts of the Service are
+        billed on a subscription basis ("Subscription(s)"). You will be billed
+        in advance on a recurring … Content Our Service allows you to post,
+        link, store, share and otherwise make available certain information,
+        text, graphics, videos, or other material ("Content"). You are
+        responsible for the … Links To Other Web Sites Our Service may contain
+        links to third­party web sites or services that are not owned or
+        controlled by My Company (change this). My Company (change this) has no
+        control over, and assumes no responsibility for, the content, privacy
+        policies, or practices of any third party web sites or services. You
+        further acknowledge and agree that My Company (change this) shall not be
+        responsible or liable, directly or indirectly, for any damage or loss
+        caused or alleged to be caused by or in connection with use of or
+        reliance on any such content, goods or services available on or through
+        any such web sites or services. Changes We reserve the right, at our
+        sole discretion, to modify or replace these Terms at any time. If a
+        revision is material we will try to provide at least 30 (change this)
+        days' notice prior to any new terms taking effect. What constitutes a
+        material change will be determined at our sole discretion. Contact Us If
+        you have any questions about these Terms, please contact us.
+      </p>
+    </section>
+    <section id="bottom-section">
+      <div id="signature">
+        <div>
+          <p>Please sign here</p>
+          <p>*</p>
+        </div>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+      </div>
+      <input type="button" value="clear signature pad" />
+      <input type="button" value="Submit" />
+    </section>
     <script src="loops.js"></script>
     <script src="main.js"></script>
   </body>
